# vidall-tv

./: .editorconfig  .gitignore  CHANGELOG.md  README.md  build-profile.json5  ijk_player.md  oh-package-lock.json5  oh-package.json5  plan-webdavFileSource.prompt.md
.github/: copilot-instructions.md
.github/agents/: PM.agent.md  harmonyos-tv-code-reviewer.agent.md  harmonyos-tv-native-engineer.agent.md  meta-agentic-project-scaffold.agent.md  pencil-ui-designer.agent.md  project-manager.agent.md  qa-subagent.agent.md  se-technical-writer.agent.md  se-ux-ui-designer.agent.md  software-engineer-agent-v1.agent.md
.github/chatmodes/: project-manager.chatmode.md
.github/instructions/: agentOrganization.instructions.md  arktsGuardrails.instructions.md  githubWorkflow.instructions.md  issueOrchestration.instructions.md
.plans/: plan-ijkSubtitleBridge.md
AppScope/: app.json5
AppScope/resources/base/element/: string.json
docs/: FILTER_AND_SEARCH.md  analytics.md  issue-1-acceptance-checklist.md  metadata-scraping.md
entry/: build-profile.json5  oh-package-lock.json5  oh-package.json5
entry/libs/arm64-v8a/: libcurl.so.4
entry/src/main/: module.json5  syscap.json
entry/src/main/cpp/: CMakeLists.txt  vidall_core_player_napi.cpp
entry/src/main/cpp/types/libvidall_core_player_napi/: index.d.ts  oh-package.json5
entry/src/main/ets/analytics/: AnalyticsManager.ets  AnalyticsReporter.ets  AnalyticsTypes.ets  README.md
entry/src/main/ets/common/constants/: CommonConstants.ets
entry/src/main/ets/components/common/: BasicClock.ets
entry/src/main/ets/components/core/file/: FileExplorer.ets  FileExplorerController.ets  ImagePreview.ets
entry/src/main/ets/components/core/player/: AVPlayerAdapter.ets  Constants.ets  FfmpegAudioRendererSink.ets  FfmpegPlayerAdapter.ets  IPlayer.ets  IjkPlayerAdapter.ets  SmbSubtitleBridgeAdapter.ets  SubtitleBridgeAdapter.ets  SubtitleRenderer.ets  VidAllPlayerAdapter.ets  VideoControls.ets  VideoData.ets  VideoPlayer.ets  VideoPlayerController.ets  index.ets
entry/src/main/ets/components/media/: ContinueWatchCard.ets
entry/src/main/ets/db/: MediaProgressStore.ets
entry/src/main/ets/db/files/: FileSourceDatabase.ets
entry/src/main/ets/db/models/: FileSourceEntity.ets  MediaEntity.ets
entry/src/main/ets/entryability/: EntryAbility.ets
entry/src/main/ets/lib/: SMBClient.ets  ScrapeClient.ets  WebDAVClient.ets
entry/src/main/ets/lib/database/: FileSourceDatabase.ets
entry/src/main/ets/lib/models/: FileSourceModel.ets
entry/src/main/ets/lib/stores/: FileSourceStore.ets
entry/src/main/ets/lib/utils/: CryptoUtil.ets
entry/src/main/ets/pages/: Index.ets
entry/src/main/ets/pages/detail/: CastDetailPage.ets  MovieDetailPage.ets  SeasonDetailPage.ets  SeriesDetailPage.ets
entry/src/main/ets/pages/files/: SmbFileExplorerPage.ets  index.ets
entry/src/main/ets/pages/history/: PlayHistoryPage.ets
entry/src/main/ets/pages/home/: index.ets
entry/src/main/ets/pages/home/tabs/: FileSourceTab.ets  MediaLibraryTab.ets  VideoServerTab.ets  index.ets
entry/src/main/ets/pages/home/topbar/: index.ets
entry/src/main/ets/pages/player/: index.ets
entry/src/main/ets/pages/search/: MediaResultPage.ets  SearchWorkspacePage.ets  index.ets
entry/src/main/ets/pages/settings/: ICON_USAGE.md  Index.ets  README.md  SettingContainer.ets  SettingListItem.ets  SettingListItemGroup.ets  SettingType.ets  SettingsController.ets
entry/src/main/ets/pages/settings/builders/: AddFileSourceBuilder.ets  DirectorySelectorBuilder.ets  FileSourceSettingBuilder.ets  HomeSettingBuilder.ets  IconBuilders.ets  ListGroupHeaderBuilder.ets  ResourceLibrarySettingBuilder.ets  SMBConfigBuilder.ets  SmbDirectorySelectorBuilder.ets  VideoServerSettingBuilder.ets  WebDAVConfigBuilder.ets
entry/src/main/ets/pages/settings/menus/: HomeMenu.ets  SettingListItem.ets  SettingListItemGroup.ets  builders.ets
entry/src/main/ets/stores/files/: FileSourceModel.ets  FileSourceStore.ets
entry/src/main/ets/stores/media/: MediaLibraryModel.ets
entry/src/main/ets/stores/sidebar/: SidebarActions.ets  SidebarModel.ets  SidebarReducer.ets  SidebarStore.ets
entry/src/main/ets/stores/tabbar/: TabBarModel.ets  TabBarStore.ets
entry/src/main/ets/utils/: AppPreferences.ets  CryptoUtil.ets  DebounceUtil.ets  DeviceCapabilityUtil.ets  FfmpegAudioDecodeUtil.ets  FfmpegVideoFrameUtil.ets  FfprobeUtil.ets  NativeFfmpegCompat.ets  TimeUtil.ets  ValidationUtil.ets  VideoInfoUtil.ets  VideoPlayerUtil.ets  VideoScannerUtil.ets  VpeEnhancerUtil.ets
entry/src/main/resources/base/element/: float.json  string.json
entry/src/ohosTest/: module.json5
entry/src/ohosTest/ets/test/: List.test.ets  PlayHistory.test.ets  WebDAV.test.ets
entry/src/ohosTest/ets/testability/: TestAbility.ets
entry/src/ohosTest/ets/testability/pages/: Index.ets
entry/src/test/: AnalyticsManager.test.ets  AnalyticsReporter.test.ets  File.test.ets  FileSourceDatabase.test.ets  IjkSubtitleBridge.test.ets  List.test.ets  MediaLibraryFilter.test.ets  README.md  ScrapeClient.test.ets  SettingsController.test.ets  SubtitleBridgeAdapter.test.ets  TimeUtil.test.ets  WebDAV.test.ets  WebDAVClientUtils.test.ets
scripts/: build_curl_ohos.sh  build_ijk_napi.sh  build_libsmb2.sh
